fixing float on mobile

--- a/src/styles/custom-mapping.scss
+++ b/src/styles/custom-mapping.scss
@@ -84,8 +84,18 @@ body {
   @extend .ml-1;
 }
 @media (max-width: $grid-float-breakpoint) {
+  .navbar .pull-right {
+    float:none !important;
+  }
+  .navbar ul {
+  margin-bottom:0;
+  }
+  .navbar .navbar-text {
+    padding:10px 0;
+    margin:0;
+  }
   a.navbar-btn {
-    margin:0 !important;
+    margin-left:0 !important;
   }
 }
 
